# tungsten

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  runtime_shim.c  tungsten-docker.sh
bootstrap/: Cargo.toml
bootstrap/src/: ast.rs  config.rs  error.rs  fold_analysis.rs  lib.rs  list_commands.rs  main.rs  span.rs  token.rs  typo_suggest.rs  utils.rs
bootstrap/src/ast/: expr.rs  items.rs  mod.rs  path.rs
bootstrap/src/cache/: build.rs  graph.rs  ir_cache.rs  management.rs  mod.rs  schema.rs  types.rs
bootstrap/src/cache/elab_cache/: compress.rs  full_output.rs  full_output_tests.rs  mod.rs  tests.rs  writer.rs
bootstrap/src/cache/tests/: core.rs  ir_cache.rs  ir_deps.rs  mod.rs
bootstrap/src/cli/: mod.rs  subcommands.rs
bootstrap/src/commands/: cache.rs  mod.rs
bootstrap/src/commands_new/: mod.rs
bootstrap/src/compile/: check_mono_coverage.rs  cmd_compile.rs  diagnostics.rs  extern_naming.rs  mangling.rs  mod.rs  tests.rs  validation.rs
bootstrap/src/compile/linking/: mod.rs  sanitize.rs  tests.rs
bootstrap/src/compile/mono/: discovery.rs  map.rs  mod.rs  ownership.rs  symbols.rs  table.rs
bootstrap/src/compile/per_module/: compilation.rs  entry.rs  mod.rs  prelude.rs  unit_compile.rs
bootstrap/src/diff/: abi.rs  l1_l2.rs  mod.rs
bootstrap/src/diff_core/: mod.rs  parser.rs  sexpr.rs  tests_parser.rs  tests_sexpr.rs  tests_structural_diff.rs
bootstrap/src/diff_ir/: mod.rs  normalize.rs  parser.rs  tests.rs
bootstrap/src/doctor/: check_ir.rs  check_type.rs  diff_types.rs  dispatch.rs  map_span.rs  mod.rs  module_overlap.rs  tests.rs
bootstrap/src/doctor/audit_mutual_types/: mod.rs  scc.rs  type_graph.rs
bootstrap/src/doctor/audit_recursion/: call_graph.rs  classify.rs  classify_tests.rs  mod.rs  scc.rs
bootstrap/src/doctor/checks/: check_nested_patterns.rs  mod.rs
bootstrap/src/doctor/self_test/: mod.rs  output.rs  registry.rs
bootstrap/src/doctor/suggest_tools/: mod.rs  patterns.rs  tests.rs
bootstrap/src/driver/: cache.rs  diagnostics.rs  error.rs  mod.rs  output.rs  pipeline.rs  tests.rs  type_registry.rs
bootstrap/src/driver/diagnostics/: mod.rs  renderers.rs  rendering.rs
bootstrap/src/driver/modules/: info.rs  (+5 more)
bootstrap/src/dump_abi/: analyze.rs  layout.rs  llc.rs  mod.rs  parse.rs  report.rs
bootstrap/src/elaborate/: codegen_types.rs  collection.rs  error.rs  error_recording.rs  mod.rs  resolve_tyvars.rs  trace.rs  type_cache.rs
bootstrap/src/error/: components.rs  lex.rs  mod.rs  parse_error.rs  render.rs
bootstrap/src/explain/: error_catalogue.rs  l2_error_catalogue.rs  mod.rs  tests.rs  type_explainer.rs  type_parser.rs  type_parser_tests.rs
bootstrap/src/info/: helpers.rs  mod.rs  type_info.rs
bootstrap/src/lexer/: literals.rs  mod.rs  operators.rs  tests.rs
bootstrap/src/parser/: exprs.rs  imports.rs  items.rs  literals.rs  mod.rs  patterns.rs  tests.rs  token_nav.rs  token_support.rs  type_defs.rs  types.rs
bootstrap/src/sidecar/: commands.rs  mod.rs  relevance.rs  store.rs  tests.rs
bootstrap/src/span/: line_index.rs  mod.rs
bootstrap/src/test_runner/: mod.rs  tests.rs
bootstrap/src/token/: classify.rs  display.rs  mod.rs
tungsten_codegen/: Cargo.toml
tungsten_codegen/src/: analysis.rs  escape_analysis.rs  lib.rs  types.rs
tungsten_codegen/src/codegen/: backend.rs  compilation.rs  debug_info.rs  error.rs  mod.rs  naming.rs  registration.rs  tests.rs
tungsten_codegen/src/types/: analysis.rs  encoding.rs  lowering.rs  mod.rs  setup.rs  tests.rs
tungsten_core/: Cargo.toml
tungsten_core/src/: context.rs  integration_tests.rs  lib.rs  types.rs
tungsten_core/src/eval/: env.rs  helpers.rs  mod.rs  step.rs
tungsten_core/src/ffi/: check.rs  context.rs  mod.rs  terms.rs  tests.rs  types.rs
tungsten_core/src/terms/: analysis.rs  constructors.rs  constructors_arith.rs  constructors_data.rs  constructors_native.rs  display.rs  mod.rs  substitution.rs  traversal.rs
tungsten_core/src/typecheck/: error.rs  mod.rs  rules.rs  rules_core.rs  rules_sum.rs
tungsten_core/src/types/: constructors.rs  display.rs  mod.rs  reconstruction.rs  tests.rs  tyvar_ops.rs  tyvar_ops_tests.rs
tungsten_runtime/: Cargo.toml
tungsten_runtime/src/: alloc_profile.rs  lib.rs  signal_handler.rs
(+1165 files in other folders)
