[package]
name = "tungsten_bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Bootstrap compiler for the Tungsten proof language"

[lib]
name = "tungsten_bootstrap"
path = "src/lib.rs"

[[bin]]
name = "tungsten"
path = "src/main.rs"

[features]
default = ["codegen"]
codegen = ["dep:tungsten_codegen"]

[dependencies]
tungsten_core = { path = "../tungsten_core" }
tungsten_codegen = { path = "../tungsten_codegen", optional = true }
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
toml = "0.8"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.24.0"
