[package]
name = "tungsten_bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Bootstrap compiler for the Tungsten proof language"

[lib]
name = "tungsten_bootstrap"
path = "src/lib.rs"

[[bin]]
name = "tungsten"
path = "src/main.rs"

[features]
default = ["codegen"]
codegen = ["dep:tungsten_codegen"]
compress = ["dep:zstd"]
profile = ["dep:tracing", "dep:tracing-chrome", "dep:tracing-subscriber"]

[dependencies]
tungsten_core = { path = "../tungsten_core" }
tungsten_codegen = { path = "../tungsten_codegen", optional = true }
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
sha2 = "0.10"
rayon = "1.10"
heed = "0.20"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
tempfile = "3.24.0"
zstd = { version = "0.13", optional = true }
tracing = { version = "0.1", optional = true }
tracing-chrome = { version = "0.7", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }

[lints]
workspace = true

[dev-dependencies]
