[package]
name = "tungsten_core"
description = "Core calculus (kernel) for the Tungsten proof language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
atty = "0.2"
libc = "0.2"
tungsten_runtime = { path = "../tungsten_runtime" }
sha2 = "0.11.0"

[dev-dependencies]

[lints]
workspace = true
