[package]
name = "tungsten_runtime"
description = "Runtime support for compiled Tungsten programs (signal handlers, diagnostics)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
libc = "0.2"

[lints]
workspace = true
